test-crates/duchess-java-tests/tests/ui/duplicate_implements.stderr
error: error in class `log.Builder`: duplicate reference in 'implements' to 'log.BuildStep'
 --> $DIR/duplicate_implements.rs:4:5
  |
4 |     public class log.Builder implements log.BuildStep, log.BuildStep {}
  |     ^^^^^^

error: aborting due to 1 previous error

